<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatarIv"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_user_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/avatar_photo" />

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/default_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/numberTv"
        app:layout_constraintStart_toEndOf="@+id/avatarIv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surnameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/default_surname"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/nameTv"
        app:layout_constraintTop_toTopOf="@id/nameTv" />

    <TextView
        android:id="@+id/numberTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/default_number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/avatarIv"
        app:layout_constraintTop_toBottomOf="@+id/nameTv" />


</androidx.constraintlayout.widget.ConstraintLayout>